<resources>
    <string name="app_name">MIND &amp; SOUL</string>
    <string name="facebook_app_id">1430893050402268</string>
    <string name="fb_login_protocol_scheme">fb1430893050402268</string>

    <string name="question1">What will remain in my life if I do NOT attain the desired?</string>
    <string name="question2">What will come in my life when I attain the desired?</string>
    <string name="question3">What will not come in my life if I do NOT attain the desired?</string>
    <string name="question4">What will go away from my life when I attain the desired?</string>

    <string name="attention_answer">Answer the questions carefully!\n
        Answers must NOT be repeated\n
        <font fgcolor='#FFFF0000'>It is important!</font></string>

    <string name="target_sample">Хочу купить дом на острове на самом северном в мире!</string>
    <string name="next">Continue</string>
    <string name="my_target">My goal?</string>
    <string name="answer">Fill the answer</string>
    <string name="done">Ready</string>
    <string name="help">Help</string>

    <string-array name="answers_sample">
        <item>Будет всё вокруг белое</item>
        <item>Буду один</item>
        <item>Никакой зелени!!!</item>
        <item>А ещё будут пингвины</item>
        <item>И белые медведи!!!</item>
    </string-array>

    <string name="help_answer_text">Fill in the fields and press READY \n\nEXAMPLE\n\n</string>
    <string name="ok">OK</string>
    <string name="compare_question">What is more important?</string>

    <string name="target_done">Ability to achieve the goal - %1$s%%</string>
    <string name="why">Why?</string>
    <string name="reset">Again</string>
    <string name="action_money">money</string>
    <string name="action_profile">profile</string>
    <string name="action_settings">settings</string>
    <string name="action_search">search</string>
    <string name="return_connection">Feedback</string>
    <string name="question_answer">Question-Answer</string>
    <string name="quit">Exit</string>
    <string name="login_sample">l0gark</string>
    <string name="will_done">Will attain</string>
    <string name="maybe_will_done">Probably attain</string>
    <string name="not_will_done">Will not attain</string>
    <string name="date_sample">26.06.2019</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="your_email">E-mail</string>
    <string name="enter_mail">Your question</string>
    <string name="my_targets">My goals</string>
    <string name="test_exit_title">Do you want to end the testing up?</string>
    <string name="test_exit_message">Notice that your data will not be saved</string>
    <string name="cancel">Cancel</string>

    <string name="result01">All is good in your life. It’s more important for you to keep the current state of affairs unchanged.</string>
    <string name="result02">You are going to do it. You have the resources and opportunities. The number of benefits outweighs the possible negative.</string>
    <string name="result03">You are not going to do it. There are more important issues that need your attention and solution.</string>
    <string name="result04">You can do it, but you will spend much more effort and resources than you expect.</string>

    <string name="why1">You probably won’t achieve your goal, today you live according to the principle “all is good and the best is the enemy of the good”</string>
    <string name="why2">You are positively motivated, purposeful, focused on improving the quality of your life, you will attain the desired!</string>
    <string name="why3">Most likely you will not reach the goal. Self-criticism demotivates you, fears leads to apathy and you tend to devalue the result.</string>
    <string name="why4">The result can be too expensive you are more focused on what you can lose than on possible benefits.</string>

    <string name="first_text">This application will help you figure out whether it is worth spending your time and
                 forces for any goal/task</string>
    <string name="all_answers_toast">Enter all answers</string>
    <string name="begin_target_toast">Enter the goal first</string>
    <string name="few_answers"> «%s» - is entered several times</string>
    <string name="some_wrong">Something went wrong!</string>


    <string-array name="hints1">
        <item>
            If I don’t buy a car then I will save money for other needs. I will maintain relations with relatives and friends,
                         spend at least vacation money.
        </item>
        <item>
            If you don’t get a slim figure, then you will at least keep your current shape, stop spending money on a fitness club,
            the right foods and other unhelpful attributes.
            Save “goodies” and parties with friends after 6 pm. Keep a relationship with your mom by praising her cooking.
        </item>
        <item>
            If you do not get married you will save the money postponed for the wedding, save the nerves in relations with your future relative,
            save your usual way of life. Keep your usual level of material security for yourself.
        </item>
    </string-array>

    <string-array name="hints2">
        <item>
            If you want to buy a car, then at least in your life along with its purchase will come:
            inspection
            shipping your mother to the country, envy from the pedestrian environment and payment for parking or
            the need to purchase a garage and fines from the traffic police.
        </item>
        <item>
            If you want to lose weight by the summer, you must understand that along with a slim figure a diet will come into your life,
            the costs of “proper” nutrition, regular physical activity and the need to observe the daily regimen.
        </item>
        <item>
            If you decide to get married then at least responsibility for relations with a partner will come into your life,
            joint budget and regular additional expenses that were not there before.
        </item>
    </string-array>

    <string-array name="hints3">
        <item>
            If you do not buy a car then you will not have problems with fines of the traffic police, trips with those you love, and transportation of your mother
            and grandmother country house, the envy of friends, enthusiastic looks of the opposite sex, the cost of inspection and payment of parking,
            as well as the opportunity to travel behind the wheel and show off your car in front of everyone.
        </item>
        <item>
            If you don’t get a slim figure by the summer, you will not get the admiring glances of the opposite sex, you will not be able to show off
            your achievements in Instagram, FaceBook etc. You will not be able to share the experience of your achievements with friends. You will not meet the one you will love”
        </item>
        <item>
            If you do not get married then no one will blow your mind regarding your imperfections, no one will wake you up in the morning, there will be no new
            social circle, there will not be a close family member, there will be no threat of increased costs for the maintenance of children in the future, there will be no life together.
        </item>
    </string-array>

    <string-array name="hints4">
        <item>
            Buying a car you lose your free time on car care and maintenance. Where do you get it from?
            From conversation with relatives, friends, from your vacation time or hobby? Relationships with some loved ones, friends and acquaintances
            may change for the worse or even break.
        </item>
        <item>
            For a slim figure, by the summer you will pay for it with “sweets”, laziness, refusal from mother’s cooking which can worsen relations with her.
            In addition, you will also have to refuse food after 6 pm. As a result, refuse parties with friends, where it’s
            happening which can worsen relationships with them.
        </item>
        <item>
            For the sake of marriage it may be necessary in the favor of the family budget to abandon part of the money that you spent on yourself in the past, give up communicating with those friends
            your spouse is not going to like.
            "Obstacles (upper left)" or "What will I stay with if I do not reach my goal? What will calm my heart down?" or
            “Were we not in any Tahiti, we are fed well here?”
        </item>
    </string-array>

</resources>
