<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context=".controller.activity.ResultActivity">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/activity_result__fab_targets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:tint="@android:color/white"
            app:layout_anchor="@id/activity_result__bottom_app_bar"
            app:srcCompat="@drawable/ic_ok" />

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/activity_result__bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/colorPrimary"
            app:fabAlignmentMode="end"
            app:fabCradleMargin="3dp"

            app:navigationIcon="@drawable/menu_white_24x24" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <TextView
        android:id="@+id/activity_result__app_name"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="@dimen/big_title_text_size"
        android:textStyle="bold"
        android:fontFamily="@font/gothic"
        />

    <TextView
        android:id="@+id/activity_result__target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/def_margin"
        android:text="@string/target_sample"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/big_title_text_size"
        android:textStyle="bold"
        android:fontFamily="@font/gothic"

        app:layout_constraintTop_toBottomOf="@id/activity_result__app_name"
        app:layout_constraintBottom_toTopOf="@id/activity_result__container"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_result__container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/def_margin"
        android:layout_marginBottom="@dimen/def_margin"
        app:layout_constraintBottom_toTopOf="@id/activity_result__target_done"
        app:layout_constraintTop_toBottomOf="@id/activity_result__target">

        <fragment
            android:id="@+id/activity_result__question1"
            android:name="com.develop.loginov.mytarget.controller.fragment.ResultFragment"
            tools:layout="@layout/fragment_result"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_marginStart="@dimen/def_margin"
            android:layout_marginTop="@dimen/def_margin"
            android:layout_marginEnd="@dimen/def_half_margin"
            android:layout_marginBottom="@dimen/def_half_margin"

            app:layout_constraintBottom_toTopOf="@id/activity_result__question3"
            app:layout_constraintEnd_toStartOf="@id/activity_result__question2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:name="@string/question1" />

        <fragment
            android:id="@+id/activity_result__question2"
            android:name="com.develop.loginov.mytarget.controller.fragment.ResultFragment"

            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:layout="@layout/fragment_result"

            android:layout_marginStart="@dimen/def_half_margin"
            android:layout_marginTop="@dimen/def_margin"
            android:layout_marginEnd="@dimen/def_margin"
            android:layout_marginBottom="@dimen/def_half_margin"

            app:layout_constraintBottom_toTopOf="@id/activity_result__question4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/activity_result__question1"
            app:layout_constraintTop_toTopOf="parent"

            app:name="@string/question2" />

        <fragment
            android:id="@+id/activity_result__question3"
            android:name="com.develop.loginov.mytarget.controller.fragment.ResultFragment"

            android:layout_width="0dp"
            android:layout_height="0dp"

            tools:layout="@layout/fragment_result"

            android:layout_marginStart="@dimen/def_margin"
            android:layout_marginTop="@dimen/def_half_margin"
            android:layout_marginEnd="@dimen/def_half_margin"
            android:layout_marginBottom="@dimen/def_margin"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/activity_result__question4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_result__question1"

            app:name="@string/question3" />

        <fragment
            android:id="@+id/activity_result__question4"
            android:name="com.develop.loginov.mytarget.controller.fragment.ResultFragment"

            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:layout="@layout/fragment_result"

            android:layout_marginStart="@dimen/def_half_margin"
            android:layout_marginTop="@dimen/def_half_margin"
            android:layout_marginEnd="@dimen/def_margin"
            android:layout_marginBottom="@dimen/def_margin"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/activity_result__question3"
            app:layout_constraintTop_toBottomOf="@id/activity_result__question2"

            app:name="@string/question4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/activity_result__target_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginTop="@dimen/def_half_margin"
        android:layout_marginEnd="@dimen/def_margin"
        android:layout_marginBottom="@dimen/def_half_margin"

        android:gravity="center"
        tools:text="@string/app_name"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/title_text_size"
        android:fontFamily="@font/gothic"

        app:layout_constraintTop_toBottomOf="@id/activity_result__container"
        app:layout_constraintBottom_toTopOf="@id/activity_result__button_reset" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_result__button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="100dp"
        android:layout_marginTop="@dimen/def_half_margin"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="@dimen/def_half_margin"

        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@id/activity_result__button_why" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_result__button_why"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="100dp"
        android:layout_marginTop="@dimen/def_half_margin"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="80dp"

        android:text="@string/why"
        app:layout_constraintBottom_toBottomOf="parent"


        />

</androidx.constraintlayout.widget.ConstraintLayout>