<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/color_white"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/activity_target__fab_targets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:tint="@android:color/white"
            app:layout_anchor="@id/activity_target__bottom_app_bar"
            app:srcCompat="@drawable/ic_ok" />

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/activity_target__bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/colorPrimary"
            app:fabAlignmentMode="end"
            app:fabCradleMargin="3dp"

            app:navigationIcon="@drawable/menu_white_24x24" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <TextView
        android:id="@+id/activity_target__app_name"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="3"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tool_bar_title_text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/activity_target__target_name_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fontFamily="@font/gothic"

        android:gravity="center"
        android:hint="@string/my_target"
        android:inputType="textLongMessage"
        android:textColor="@color/black"
        android:textSize="@dimen/big_title_text_size"

        app:layout_constraintBottom_toTopOf="@id/activity_target__vertical_line"
        app:layout_constraintTop_toBottomOf="@id/activity_target__app_name" />

    <View
        android:id="@+id/activity_target__horizontal_line"
        android:layout_width="0dp"
        android:layout_height="3dp"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:background="@android:color/black"

        app:layout_constraintBottom_toTopOf="@id/activity_target__attention"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_target__target_name_edit_text" />

    <View
        android:id="@+id/activity_target__vertical_line"
        android:layout_width="3dp"
        android:layout_height="0dp"

        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"

        android:background="@android:color/black"

        app:layout_constraintBottom_toTopOf="@id/activity_target__attention"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_target__target_name_edit_text" />

    <fragment
        android:id="@+id/activity_target__question1"
        android:name="com.develop.loginov.mytarget.controller.fragment.QuestionFragment"
        android:layout_width="0dp"

        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/def_margin"
        android:layout_marginEnd="@dimen/def_half_margin"
        android:layout_marginBottom="8dp"

        app:layout_constraintBottom_toTopOf="@+id/activity_target__question3"
        app:layout_constraintEnd_toStartOf="@id/activity_target__vertical_line"
        app:layout_constraintStart_toStartOf="@id/activity_target__horizontal_line"
        app:layout_constraintTop_toTopOf="@id/activity_target__vertical_line"
        app:name="@string/question1"
        tools:layout="@layout/fragment_question" />

    <fragment
        android:id="@+id/activity_target__question2"
        android:name="com.develop.loginov.mytarget.controller.fragment.QuestionFragment"
        android:layout_width="0dp"

        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/def_half_margin"
        android:layout_marginTop="@dimen/def_margin"
        android:layout_marginBottom="8dp"

        app:layout_constraintBottom_toTopOf="@+id/activity_target__question4"
        app:layout_constraintEnd_toEndOf="@id/activity_target__horizontal_line"
        app:layout_constraintStart_toEndOf="@id/activity_target__vertical_line"

        app:layout_constraintTop_toTopOf="@id/activity_target__vertical_line"
        app:name="@string/question2"
        tools:layout="@layout/fragment_question" />

    <fragment
        android:id="@+id/activity_target__question3"
        android:name="com.develop.loginov.mytarget.controller.fragment.QuestionFragment"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_half_margin"
        android:layout_marginEnd="@dimen/def_half_margin"

        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_target__vertical_line"
        app:layout_constraintEnd_toStartOf="@id/activity_target__vertical_line"

        app:layout_constraintStart_toStartOf="@id/activity_target__horizontal_line"
        app:layout_constraintTop_toBottomOf="@id/activity_target__horizontal_line"
        app:name="@string/question3"
        tools:layout="@layout/fragment_question" />

    <fragment
        android:id="@+id/activity_target__question4"
        android:name="com.develop.loginov.mytarget.controller.fragment.QuestionFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/def_half_margin"
        android:layout_marginTop="@dimen/def_half_margin"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_target__vertical_line"

        app:layout_constraintEnd_toEndOf="@id/activity_target__horizontal_line"
        app:layout_constraintStart_toEndOf="@id/activity_target__vertical_line"


        app:layout_constraintTop_toBottomOf="@id/activity_target__horizontal_line"
        app:name="@string/question4"
        tools:layout="@layout/fragment_question" />

    <TextView
        android:id="@+id/activity_target__attention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginTop="@dimen/def_half_margin"
        android:layout_marginEnd="@dimen/def_margin"
        android:layout_marginBottom="@dimen/def_half_margin"

        android:fontFamily="@font/gothic"
        android:gravity="center"
        android:text="@string/attention_answer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toTopOf="@id/activity_target__button_next"
        app:layout_constraintTop_toBottomOf="@id/activity_target__vertical_line" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_target__button_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="100dp"
        android:layout_marginTop="@dimen/def_half_margin"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="80dp"

        android:fontFamily="@font/gothic"
        android:text="@string/next"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_target__attention" />


</androidx.constraintlayout.widget.ConstraintLayout>
