<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/def_half_margin"
        android:layout_marginEnd="@dimen/def_half_margin"
        android:layout_marginTop="@dimen/def_margin"
        android:layout_marginBottom="@dimen/def_margin"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/def_half_margin">

            <TextView
                android:id="@+id/item_target__name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/def_margin"
                android:gravity="center"
                android:fontFamily="@font/gothic"

                android:textColor="@android:color/black"
                android:textSize="@dimen/big_title_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/target_sample" />

            <TextView
                android:id="@+id/item_target__result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/def_margin"
                android:text="@string/will_done"
                android:textColor="@color/green"
                android:fontFamily="@font/gothic"

                android:textSize="@dimen/title_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_target__name" />

            <TextView
                android:id="@+id/item_target__date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/def_margin"
                android:gravity="center"
                android:fontFamily="@font/gothic"

                android:text="@string/date_sample"
                android:textSize="@dimen/title_text_size"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_target__name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</FrameLayout>